[package]
name        = "motif-tui"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description = "Motif remote dev agent — TUI client library + motif-tui binary"

[[bin]]
name = "motif-tui"
path = "src/main.rs"

[dependencies]
motif-proto        = { path = "../motif-proto" }
motif-client       = { path = "../motif-client" }

tokio              = { workspace = true }

futures-util       = { workspace = true }

serde              = { workspace = true }
serde_json         = { workspace = true }
bytes              = { workspace = true }
base64             = { workspace = true }

ratatui            = { workspace = true }
crossterm          = { workspace = true }
vt100              = { workspace = true }
tui-term           = { workspace = true }

clap               = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default   = []
# Pass-through: motif-client owns the optional motif-net (with tailscale)
# dep tree. Build motif-tui with --features tailscale to enable
# `--via tailscale://hostname[:port]`.
tailscale = ["motif-client/tailscale"]
