[package]
name        = "motif-web"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
description = "Motif — browser bridge: HTTP/WS server in front of motifd"

[[bin]]
name = "motif-web"
path = "src/main.rs"

[dependencies]
motif-proto        = { path = "../motif-proto" }

tokio              = { workspace = true }
tokio-tungstenite  = { workspace = true }
axum               = { workspace = true }
tower-http         = { workspace = true }

futures-util       = { workspace = true }

serde              = { workspace = true }
serde_json         = { workspace = true }

clap               = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

rust-embed         = { workspace = true }

bytes              = { workspace = true }
tokio-stream       = "0.1"
url                = { workspace = true }
